src/objects/WES_Fuel_Card_Default__c.object
<CustomObject>
    <fields>
        <fullName>Application_Velocity_Profile__c</fullName>
        <formula>WES_Application_Request__r.VelocityProfileName__c</formula>
        <inlineHelpText>Determined on the related Application</inlineHelpText>
        <label>Velocity Control Profiler</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Holder_Type__c</fullName>
        <label>Card Holder Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Driver</fullName>
                </value>
                <value>
                    <fullName>Vehicle</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Card Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Sort_Label__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoice Sort Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_International__c</fullName>
        <label>Is International?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Networks__c</fullName>
        <label>Other Networks</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PIN_Creation_Method__c</fullName>
        <label>PIN Creation Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>System generated</fullName>
                </value>
                <value>
                    <fullName>User defined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PIN_Type__c</fullName>
        <label>PIN Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Card</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Fleet</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PIN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PIN</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POS_Prompt__c</fullName>
        <label>POS Prompt</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>200</fullName>
                    <label>None</label>
                </value>
                <value>
                    <fullName>220</fullName>
                    <label>ID input</label>
                </value>
                <value>
                    <fullName>250</fullName>
                    <label>Odometer input</label>
                </value>
                <value>
                    <fullName>230</fullName>
                    <label>Odometer and vehicle or driver ID input</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Option_Fuel__c</fullName>
        <label>Purchase Option Fuel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>0 - All Fuels</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>1 - Diesel</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 - Unleaded</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 - Unleaded &amp; LPG</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>8 - LPG</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Option_Products__c</fullName>
        <label>Purchase Option Products</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>0 - None</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>1 - Lubes</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 - Lubes + Services</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 - Lubes + Services + TBA</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4 - Lubes + Services + TBA + ShopArticles</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Option_Services__c</fullName>
        <label>Purchase Option Services</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Toll_Usage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>0</fullName>
                    <label>0 - None</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>1 - Special</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 - Tolls + Ferries</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 - Tolls + Ferries + Special</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4 - Carwash</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>5 - Carwash + Special</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>6 - Carwash + Tolls + Ferries</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>7 - Carwash + Tolls + Ferries + Special</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TimeLimitCode__c</fullName>
        <formula>WES_Application_Request__r.TimeLimitCode__c</formula>
        <label>TimeLimitCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toll_Usage__c</fullName>
        <label>Toll Usage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Truck_Fleet__c</fullName>
        <label>Truck / Fleet</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <label>Truck</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <label>Fleet</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VelocityControlIFCSCode__c</fullName>
        <formula>WES_Application_Request__r.velocityControlProfile__c</formula>
        <label>Velocity Control IFCS Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WES_Application_Request__c</fullName>
        <label>WES Application Request</label>
        <referenceTo>WES_Application_Request__c</referenceTo>
        <relationshipLabel>WES Fuel Cards Defaults</relationshipLabel>
        <relationshipName>WES_Fuel_Card_Defaults_Defaults</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>PIN_Validation_4_Digit_Number</fullName>
        <active>true</active>
        <description>A PIN Number must be a 4 digit Number</description>
        <errorConditionFormula>NOT(ISBLANK(PIN__c)) &amp;&amp; 
(LEN(PIN__c) &lt;&gt; 4 || 
NOT(ISNUMBER(PIN__c)))</errorConditionFormula>
        <errorDisplayField>PIN__c</errorDisplayField>
        <errorMessage>PIN Must be a 4 Digit Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PIN_Validation_Ascending_Numbers</fullName>
        <active>true</active>
        <description>A PIN Number can&apos;t have 4 Numbers Ascending. Ex: 1234</description>
        <errorConditionFormula>AND( 
ISNUMBER(PIN__c), 
VALUE(MID(PIN__c, 1,1)) +1 = VALUE(MID(PIN__c, 2,1)), 
VALUE(MID(PIN__c, 2,1)) +1 = VALUE(MID(PIN__c, 3,1)), 
VALUE(MID(PIN__c, 3,1)) +1 = VALUE(MID(PIN__c, 4,1)) 
)</errorConditionFormula>
        <errorDisplayField>PIN__c</errorDisplayField>
        <errorMessage>PIN Can NOT be 4 numbers in Ascending order (Ex: 1234)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PIN_Validation_Consecutive_Numbers</fullName>
        <active>true</active>
        <description>A PIN Number can&apos;t have 4 consecutive Numbers</description>
        <errorConditionFormula>AND( 
ISNUMBER(PIN__c), 
MID(PIN__c, 1,1) = MID(PIN__c, 2,1), 
MID(PIN__c, 1,1) = MID(PIN__c, 3,1), 
MID(PIN__c, 1,1) = MID(PIN__c, 4,1) 
)</errorConditionFormula>
        <errorDisplayField>PIN__c</errorDisplayField>
        <errorMessage>PIN Can NOT be 4 consecutive numbers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PIN_Validation_Descending_Numbers</fullName>
        <active>true</active>
        <description>A PIN Number can&apos;t have 4 Numbers Descending. Ex: 4321</description>
        <errorConditionFormula>AND( 
ISNUMBER(PIN__c), 
VALUE(MID(PIN__c, 1,1)) -1 = VALUE(MID(PIN__c, 2,1)), 
VALUE(MID(PIN__c, 2,1)) -1 = VALUE(MID(PIN__c, 3,1)), 
VALUE(MID(PIN__c, 3,1)) -1 = VALUE(MID(PIN__c, 4,1)) 
)</errorConditionFormula>
        <errorDisplayField>PIN__c</errorDisplayField>
        <errorMessage>PIN Can NOT be 4 numbers in Descending order (Ex: 4321)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Saving_PIN_if_System_Generated</fullName>
        <active>true</active>
        <description>User can not enter and save a PIN number if they select System Generated as PIN Creation Type</description>
        <errorConditionFormula>AND( 
TEXT(PIN_Creation_Method__c) = &quot;System generated&quot;, 
NOT(ISBLANK(PIN__c)) 
)</errorConditionFormula>
        <errorDisplayField>PIN__c</errorDisplayField>
        <errorMessage>You can not enter a PIN if you select &quot;System Generated&quot; as PIN Creation Method</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_PIN_if_User_Defined</fullName>
        <active>true</active>
        <description>You must enter a PIN number if &quot;User defined&quot; is selected as PIN Creation Type</description>
        <errorConditionFormula>AND( 
TEXT(PIN_Creation_Method__c) = &quot;User defined&quot;, 
ISBLANK(PIN__c)
)</errorConditionFormula>
        <errorDisplayField>PIN__c</errorDisplayField>
        <errorMessage>You must enter a PIN number if &quot;User defined&quot; is selected as PIN Creation Type</errorMessage>
    </validationRules>
</CustomObject>